--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "socket.io-client": "^4.7.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind": "^4.0.0",
